# trans-imit

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindBullet.cmake  FindEigen3.cmake
docker/: Dockerfile  README.md
hpc/: README.md  jobscript.slm  train-hpc.sh
scripts/: build_cmake.sh  build_deepimit.sh  build_extern.sh  collect_srcs.sh  init_step.sh
tests/: CMakeLists.txt
